# models_from_scratch

./: .gitignore  README.md  pyproject.toml  questions.txt
mini_dl_framework/: README.md  autograd.py  autograd_demo.ipynb  drafts.py  he_init_hists.arrow  layer.py  loss.py  mnist.ipynb  model.py  optimizer.py  plots.arrow
notebooks/: autograd_demo.ipynb  mnist.ipynb  mnist.py
notebooks/dropout/: dropout.ipynb
notebooks/measuring_perf/: validation_set.ipynb
notes/: _quarto.yml  index.qmd
perceptron/: perceptron.py
src/mini_dl/: __init__.py  autograd.py
src/mini_dl/nn/: layer.py  loss.py  model.py
src/mini_dl/optim/: optimizer.py
