[project]
name = "models_from_scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holoviews>=1.22.1",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pip>=26.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]
