[project]
name = "models_from_scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holoviews>=1.22.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyparsing>=3.3.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]
